# crawler

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
crawler_pkg/: __init__.py  crawl.py  helpers.py
streamlit_app/: crawler.py  engine.py  langprocessor.py
