[tool.poetry]
name = "crawler_pkg"
version = "0.1.0"
description = "a custom webcrawler with NLP tools as plugin"
authors = ["tariq <tariqmohamed59@gmail.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

packages = [
    { include = "crawler_pkg" }
]

include = ["crawler_pkg/data/*"]


[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
colorama = "~0.4.4"
contractions = "~0.1.72"
email-validator = "~1.2"
inflect = "~5.6.0"
nltk = "~3.7"
numpy = "~1.22"
pandas = "~1.4"
phonenumbers = "~8.12.48"
requests = "~2.27.1"
requests-html = "~0.10.0"
scipy = "~1.8.1"
sklearn = "*"
sutime = "~1.0.1"
urllib3 = "~1.26.9"
tqdm = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
